--- a/todo_frontend/index.html
+++ b/todo_frontend/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- Primary Meta Tags -->
+    <title>TaskMate – Smart Task Management Dashboard</title>
+    <meta name="title" content="TaskMate – Smart Task Management Dashboard">
+    <meta name="description" content="Organize your tasks effortlessly with TaskMate. Prioritize, sort, and manage your day using a responsive, drag-and-drop dashboard.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-domain.com/">
+    <meta property="og:title" content="TaskMate – Smart Task Management Dashboard">
+    <meta property="og:description" content="Organize your life with a beautiful and intuitive task manager built with React + Django.">
+    <meta property="og:image" content="https://your-domain.com/og-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://your-domain.com/">
+    <meta property="twitter:title" content="TaskMate – Smart Task Management Dashboard">
+    <meta property="twitter:description" content="Organize your tasks easily. Prioritize, complete, and manage with a smart dashboard.">
+    <meta property="twitter:image" content="https://your-domain.com/og-preview.png">
+
+    <!-- Manifest & Theme -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#1e1e2f" />
   </head>
   <body>
     <div id="root"></div>
