Trying to deploy the backend

--- a/todo_frontend/index.html
+++ b/todo_frontend/index.html
@@ -16,17 +16,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com/">
+    <meta property="og:url" content="https://task-mate-kappa-rosy.vercel.app/">
     <meta property="og:title" content="TaskMate – Smart Task Management Dashboard">
     <meta property="og:description" content="Organize your life with a beautiful and intuitive task manager built with React + Django.">
-    <meta property="og:image" content="https://your-domain.com/og-preview.png">
+    <meta property="og:image" content="https://task-mate-kappa-rosy.vercel.app/og-preview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-domain.com/">
+    <meta property="twitter:url" content="https://task-mate-kappa-rosy.vercel.app/">
     <meta property="twitter:title" content="TaskMate – Smart Task Management Dashboard">
     <meta property="twitter:description" content="Organize your tasks easily. Prioritize, complete, and manage with a smart dashboard.">
-    <meta property="twitter:image" content="https://your-domain.com/og-preview.png">
+    <meta property="twitter:image" content="https://task-mate-kappa-rosy.vercel.app/og-preview.png">
 
     <!-- Manifest & Theme -->
     <link rel="manifest" href="/manifest.json">
